--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,17 @@ attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 bs4==0.0.2
+cachelib==0.13.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 cssselect==1.3.0
+Deprecated==1.2.18
 fake-useragent==2.2.0
 Flask==3.1.1
+Flask-Caching==2.3.1
 flask-cors==6.0.1
+Flask-Limiter==3.12
 flask-restx==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
@@ -21,18 +25,26 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+limits==5.5.0
 lxml==6.0.0
 lxml_html_clean==0.4.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==4.0.0
+mdurl==0.1.2
+ordered-set==4.1.0
+packaging==25.0
 parse==1.20.2
 pyee==11.1.1
+Pygments==2.19.2
 pyppeteer==2.0.0
 pyquery==2.0.1
 pytz==2025.2
+redis==6.4.0
 referencing==0.36.2
 requests==2.32.4
 requests-html==0.10.0
+rich==13.9.4
 rpds-py==0.27.0
 soupsieve==2.7
 SQLAlchemy==2.0.42
@@ -42,4 +54,5 @@ urllib3==1.26.20
 w3lib==2.3.1
 websockets==10.4
 Werkzeug==3.1.3
+wrapt==1.17.2
 zipp==3.23.0
